Added error and highlight classes

--- a/css/styles.less
+++ b/css/styles.less
@@ -1,3 +1,7 @@
+body {
+  background-color: #606060;
+}
+
 textarea {
   margin-bottom: 10px;
 }
@@ -10,4 +14,13 @@ textarea {
     padding: 10px;
     background-color: #ececec;
   }
+}
+
+.error {
+  color: #ff0000;
+  background-color: #a9a9a9;
+}
+
+.highlight {
+  background-color: #f3fa6f;
 }
