Changed page text colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,1 @@
-body{background-color:#606060}textarea{margin-bottom:10px}.words-list{margin-top:50px;list-style:none}.words-list li{width:50px;padding:10px;background-color:#ececec}.error{color:#f00;background-color:#a9a9a9}.highlight{background-color:#f3fa6f}
+body{background-color:#606060;color:#fff}textarea{margin-bottom:10px}.words-list{margin-top:50px;list-style:none}.words-list li{width:50px;padding:10px;background-color:#ececec}.error{color:#f00;background-color:#a9a9a9}.highlight{background-color:#f3fa6f}
