Updated styling for error and list items

--- a/css/styles.less
+++ b/css/styles.less
@@ -11,15 +11,19 @@ textarea {
   margin-top: 50px;
   list-style: none;
   li {
-    width: 50px;
+    width: 20%;
     padding: 10px;
     background-color: #000000;
   }
 }
 
+#error {
+  display: none;
+}
+
 .error {
   color: #ff0000;
-  background-color: #a9a9a9;
+  text-shadow: 1px 1px 1px #000;
 }
 
 .highlight {
