--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,1 @@
-body{background-color:#606060;color:#fff}textarea{margin-bottom:10px}.words-list{margin-top:50px;list-style:none}.words-list li{width:20%;padding:10px;background-color:#000}#error{display:none}.error{color:#f00;text-shadow:1px 1px 1px #000}.highlight{background-color:#f3fa6f}
+body{background-color:#606060;color:#fff}textarea{margin-bottom:10px}.words-list{margin-top:50px;list-style:none}.words-list li{width:20%;padding:10px;background-color:#000}#error{display:none}.error{color:#f00;text-shadow:1px 1px 1px #000}.highlight{background-color:#f3fa6f;color:#000}
