--- a/css/styles.less
+++ b/css/styles.less
@@ -30,3 +30,10 @@ textarea {
   background-color: #f3fa6f;
   color: #000;
 }
+
+.preview {
+  background-color: #000;
+  padding: 15px;
+  opacity: 0.7;
+  border: 1px solid #fff;
+}
